# dirtycatcher

./: .gitignore  MANIFEST.in  README.md  dirtyget.py  podcast_downloader.py  pyproject.toml  requirements.txt  sample_castgetrc  sample_dirtygetrc
dirtycatcher/: __init__.py  cli.py  podcast_downloader.py
