[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dirtycatcher"
version = "0.1.0"
description = "Podcast downloader that uses dirtyget configuration format"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "requests>=2.25.0",
    "mutagen>=1.45.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/dirtycatcher"
"Bug Tracker" = "https://github.com/yourusername/dirtycatcher/issues"

[project.scripts]
dirtycatcher = "dirtycatcher.cli:main"
dirtyget = "dirtycatcher.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dirtycatcher*"]
exclude = ["tests*"]